@@ -1,3 +1,13 @@
+2014-10-01  Brent Fulgham  <bfulgham@apple.com>
+
+        [Win] 32-bit JavaScriptCore should limit itself to the C loop
+        https://bugs.webkit.org/show_bug.cgi?id=137304
+        <rdar://problem/18375370>
+
+        Reviewed by Michael Saboff.
+
+        * wtf/Platform.h: Force the C loop when building for 32-bit Windows.
+
 2014-09-30  Christophe Dumez  <cdumez@apple.com>
 
         Generalize is<>() / downcast<>() support to all types
